# PaperQAAgent

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: agent.py  deps.py  llm.py  papers.py  settings.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/services/: agent_tools.py  citation_verifier.py  database.py  embedding.py  evidence_builder.py  import_service.py  llm_providers.py  paper_agent.py  paper_sources.py  pdf_service.py  postgres_storage.py  qa_agent.py  retrieval.py  storage.py
apps/api/tests/: test_agent.py  test_api.py  test_llm_providers.py  test_search.py  test_storage.py
apps/web/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentChat.tsx  PdfReader.tsx  QaPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx
apps/web/lib/: api.ts  types.ts
docs/: USAGE.zh-CN.md
infra/: init.sql
